--- a/package.json
+++ b/package.json
@@ -21,5 +21,21 @@
   "files": [
     "lib",
     "package.json"
-  ]
+  ],
+  "directories": {
+    "lib": "lib"
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ksoze84/useStateHandler.git"
+  },
+  "keywords": [
+    "class",
+    "hook"
+  ],
+  "bugs": {
+    "url": "https://github.com/ksoze84/useStateHandler/issues"
+  },
+  "homepage": "https://github.com/ksoze84/useStateHandler#readme"
 }
