--- a/package.json
+++ b/package.json
@@ -8,12 +8,8 @@
   "license": "MIT",
   "types": "lib/main.d.ts",
   "dependencies": {
-    "@types/node": "^15.3.0",
-    "@types/react": "^17.0.20",
-    "react": "^17.0.2",
     "rollup": "^2.48.0",
-    "rollup-plugin-typescript2": "^0.30.0",
-    "typescript": "^4.2.4"
+    "rollup-plugin-typescript2": "^0.30.0"
   },
   "scripts": {
     "build": "rollup -c"
@@ -25,7 +21,16 @@
   "directories": {
     "lib": "lib"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@types/react": "^17.0.20",
+    "react": "^17.0.2",
+    "typescript": "^4.2.4",
+    "@types/node": "^15.3.0"
+  },
+  "peerDependencies": {
+    "@types/react": "^17.0.20",
+    "react": "^17.0.2"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ksoze84/useStateHandler.git"
