--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "use-state-handler",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "Class based state handler",
   "main": "lib/main.js",
   "module": "lib/main.esm.js",
@@ -8,8 +8,6 @@
   "license": "MIT",
   "types": "lib/main.d.ts",
   "dependencies": {
-    "rollup": "^2.48.0",
-    "rollup-plugin-typescript2": "^0.30.0"
   },
   "scripts": {
     "build": "rollup -c"
@@ -25,7 +23,9 @@
     "@types/react": "^17.0.20",
     "react": "^17.0.2",
     "typescript": "^4.2.4",
-    "@types/node": "^15.3.0"
+    "@types/node": "^15.3.0",
+    "rollup": "^2.48.0",
+    "rollup-plugin-typescript2": "^0.30.0"
   },
   "peerDependencies": {
     "@types/react": "^17.0.20",
