--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "use-state-handler",
-  "version": "2.0.0",
+  "version": "2.1.0",
   "description": "Object based state handler",
   "main": "lib/main.js",
   "module": "lib/main.esm.js",
@@ -9,7 +9,13 @@
   "types": "lib/main.d.ts",
   "dependencies": {},
   "scripts": {
-    "build": "rollup -c"
+    "build": "rollup -c",
+    "deploy": "yarn config set version-git-message ",
+    "postdeploy": "yarn version --minor",
+    "parche": "yarn config set version-git-message ",
+    "postparche": "yarn version --patch",
+    "version": "git add -A ",
+    "postversion": "git push origin && git push origin --tags && yarn config set version-git-message 'v%s' && yarn npm publish "
   },
   "files": [
     "lib",
