--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "use-state-handler",
-  "version": "2.1.1",
+  "version": "2.1.2",
   "description": "Object based state handler",
   "main": "lib/main.js",
   "module": "lib/main.esm.js",
@@ -15,7 +15,7 @@
     "parche": "yarn config set version-git-message ",
     "postparche": "yarn version --patch",
     "version": "git add -A ",
-    "postversion": "git push origin && git push origin --tags && yarn config set version-git-message 'v%s' && npm publish "
+    "postversion": "git push origin && git push origin --tags && yarn config set version-git-message 'v%s' "
   },
   "files": [
     "lib",
