--- a/package.json
+++ b/package.json
@@ -10,10 +10,8 @@
   "dependencies": {},
   "scripts": {
     "build": "rollup -c",
-    "deploy": "yarn config set version-git-message ",
-    "postdeploy": "yarn version --minor",
-    "parche": "yarn config set version-git-message ",
-    "postparche": "yarn version --patch",
+    "deploy": "npm version minor --force -m",
+    "parche": "npm version patch --force -m",
     "version": "git add -A ",
     "postversion": "git push origin && git push origin --tags && yarn config set version-git-message 'v%s' "
   },
@@ -27,13 +25,12 @@
   "devDependencies": {
     "@types/node": "^15.3.0",
     "@types/react": "^17.0.20",
-    "react": "^18.2.0",
-    "rollup": "^2.48.0",
-    "rollup-plugin-typescript2": "^0.30.0",
-    "typescript": "^4.4.2"
+    "rollup": "^2.79.2",
+    "rollup-plugin-typescript2": "^0.36.0",
+    "typescript": "^4.9.5"
   },
   "peerDependencies": {
-    "react": "^18.2.0"
+    "react": "^17.0.2"
   },
   "repository": {
     "type": "git",
