--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "use-state-handler",
-  "version": "3.1.0",
+  "version": "3.1.1",
   "description": "Object based state handler",
   "main": "lib/main.js",
   "module": "lib/main.esm.js",
@@ -30,7 +30,7 @@
     "typescript": "^4.9.5"
   },
   "peerDependencies": {
-    "react": "^17.0.2"
+    "react": ">= 16.8.0"
   },
   "repository": {
     "type": "git",
