--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "use-state-handler",
-  "version": "5.1.1",
+  "version": "5.1.2",
   "description": "Object based state handler",
   "main": "lib/main.js",
   "module": "lib/main.esm.js",
@@ -42,7 +42,11 @@
     "manager",
     "hook",
     "react",
-    "shared"
+    "shared",
+    "share",
+    "instance",
+    "Selector",
+    "derived"
   ],
   "bugs": {
     "url": "https://github.com/ksoze84/useStateHandler/issues"
